# weighty

./: CMakeLists.txt  CMakePresets.json
src/: alarm.c  alarm.h  audioout.c  audioout.h  btcomm.c  btcomm.h  current_song.c  list_manager.h  list_utils.c  mtputils.c  myflactag.c  myid3tag.h  mylyrics.h  mytaglib.c  myutils.c  myutils.h  myxine.c  myxine.h  net_utils.c  network.c  player.c  player.h  playnow_list.c  playnow_list.h  queue.h  sleep.c  sleep.h  songhash.c  songhash.h  sqlite.c  three_lists.c  weighty.c  weighty.h
weighty/: .project  gsoap_update.txt
weighty/src/: alarm.c  audioout.c  audioout.h  current_song.c  current_song.h  firsttime.c  firsttime.h  flacplay.c  flacplay.h  list_manager.c  list_utils.h  lyrics.c  mp3play.c  mp3play.h  mtputils.c  mtputils.h  myflactag.c  myflactag.h  myid3tag.c  mymp4tag.c  mymp4tag.h  myoggtag.c  myoggtag.h  mytaglib.h  myutils.c  myutils.h  myxine.c  net_utils.c  net_utils.h  network.c  network.h  player.c  playnow_list.c  playnow_list.h  queue.c  sleep.c  songhash.c  sqlite.c  sqlite.h  three_lists.c  (+3 more)
